# ros_2017

2303/: readme.txt
2303/Cherepanov/Lab_1/: readme.txt
2303/Cherepanov/Lab_1/lab_1/: package.xml
2303/Cherepanov/Lab_1/lab_1/src/: publisher.py  subscriber.py
2303/Kanushin/lab_1/: CMakeLists.txt  package.xml
2303/Kanushin/lab_1/res/: map.txt
2303/Kanushin/lab_1/scripts/: listener.py  talker.py
2303/Kriuchkov/lab1/: ReadMe.txt
2303/Kriuchkov/lab3/: ReadMe.txt
2303/Skorospelov/lab1/devel/: .catkin  .rosinstall  setup.sh
2303/Skorospelov/lab1/devel/lib/maze/: maze_sub
2303/Skorospelov/lab1/devel/lib/pkgconfig/: maze.pc
2303/Skorospelov/lab1/devel/share/maze/cmake/: mazeConfig.cmake
2303/Skorospelov/lab1/src/maze/: CMakeLists.txt  package.xml
2303/Skorospelov/lab1/src/maze/src/: publisher.cpp  subscriber.cpp
2303/Skorospelov/lab1___/maze/: CMakeLists.txt  package.xml
2303/Skorospelov/lab1___/maze/src/: publisher.cpp  subscriber.cpp
2303/Zaborovskiy/: setup.sh  наборкомманд
2303/Zaborovskiy/lab1/: README.MD  Readme.txt  manifest.xml
2303/Zaborovskiy/lab1/nodes/: input.py  listener.py
2303/Zaborovskiy/lab2/: manifest.xml
2304/: readme.txt
2304/Danilov/Lab1/: README.MD  build.sh  pub.sh  sub.sh
2304/Danilov/Lab1/maze/: CMakeLists.txt  package.xml
2304/Danilov/Lab1/maze/include/maze/: maze.h
2304/Danilov/Lab1/maze/src/: client.cpp  server.cpp
2304/Danilov/Lab1/mazepy/: CMakeLists.txt  package.xml
2304/Danilov/Lab1/mazepy/src/: publisher.py  subscriber.py
2304/Klimuk/lab1/: CMakeLists.txt  readme.txt
2304/Klimuk/lab1/lab1/: package.xml
2304/Klimuk/lab1/lab1/res/: labyrinth_data_0.txt  labyrinth_data_1.txt  labyrinth_data_2.txt
2304/Klimuk/lab1/lab1/src/: publisher.py  subscriber.py
2304/Kuzmin/lab1/mazebot/: CMakeLists.txt  package.xml
2304/Kuzmin/lab1/mazebot/include/: bot.cpp  getch.cpp
2304/Kuzmin/lab1/mazebot/src/: listener_node.cpp  publisher_node.cpp
2304/Motovilov/lab1/: README.md
2304/Motovilov/lab1/treasurehunter/: CMakeLists.txt  package.xml
2304/Motovilov/lab1/treasurehunter/include/treasurehunter/: mazeframe.h
2304/Motovilov/lab1/treasurehunter/msg/: Pose.msg
2304/Motovilov/lab1/treasurehunter/src/: getch.cpp  hunter.cpp  maze.cpp
