<?xml version="1.0"?>
<package>
  <name>maze</name>
  <version>0.0.1</version>
  <description>The maze package</description>

  <maintainer email="leosko94@gmail.com">Leonid Skorospelov</maintainer>
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
